# liturgical-orthodox-calendar

./: CMakeLists.txt  CMakeQt4.txt  CMakeQt5.txt  Liturgical_Orthodox_Calendar.pro  README.md  addbookmarkdialog.cpp  addbookmarkdialog.h  calendarwidget.cpp  calendarwidget.h  data.cpp  data.h  liturgical_calendar.qrc  main.cpp  mainwindow.cpp  mainwindow.h  networkstuff.cpp  networkstuff.h  settingswidget.cpp  settingswidget.h  statusbar.cpp  statusbar.h  toolbar.cpp  toolbar.h  traywidget.cpp  traywidget.h
